# src/main/java/com/chaty/shrimpfarm/model/Pond.java
@@ -2,15 +2,19 @@ package com.chaty.shrimpfarm.model;
 
 import java.util.List;
 
+import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
 
 import lombok.Data;
 
 @Data
 @Document(collection = "pond")
-public class PondInfo {
+public class Pond {
+	
+	@Id
+	private String _id;
 
-	private String number;
+	private Integer number;
 
 	private String site;
 
